lesson 5 required task

--- a/lesson_5/display-dom.html
+++ b/lesson_5/display-dom.html
@@ -31,7 +31,9 @@
             <b>nextSibling</b> – следующий элемент.
         </li>
     </ul>
-    <script src="display-dom.js"></script>
+<!--    <script src="display-dom.js"></script>-->
+<!--    <script src="display-dom2.js"></script>-->
+    <script src="display-dom3.js"></script>
 </body>
 
 </html>
