lesson 6 required task show message

--- a/lesson_6/fcs/index.html
+++ b/lesson_6/fcs/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form-wrapper">
         <h3>Ticket booking form</h3>
-        <div class="error-message"></div>
+        <div class="message"></div>
         <form id="ticketForm" method="post">
             <div class="full-name">
                 <label for="fname">Full name</label>
